# cookiecutter-ampel

./: README.md  cookiecutter.json  copier.yaml
Ampel-{{cookiecutter.project_name}}/: .gitignore  README.md  pyproject.toml  renovate.json
Ampel-{{cookiecutter.project_name}}/.github/workflows/: cruft.yml  main.yml
Ampel-{{project_name}}/: .gitignore  README.md.jinja  pyproject.toml.jinja  renovate.json
Ampel-{{project_name}}/.github/workflows/: cruft.yml
Ampel-{{project_name}}/ampel/{{project_name | lower}}/ingest/: {{project_name}}CompilerOptions.py.jinja  {{project_name}}DataPointShaper.py.jinja
Ampel-{{project_name}}/ampel/{{project_name | lower}}/view/: {{ project_name }}T2Tabulator.py.jinja
Ampel-{{project_name}}/conf/: unit.yml.jinja
Ampel-{{project_name}}/tests/: test_config.py
