[tool.poetry]
name = "ampel-{{cookiecutter.project_name | lower}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = [
    "{{cookiecutter.author_full_name}} <{{cookiecutter.author_email}}>",
]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://ampelproject.github.io"
repository = "https://github.com/{{cookiecutter.github_org_or_username}}/Ampel-{{cookiecutter.project_name}}"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Typing :: Typed",
]
packages = [
    {include = "ampel"}
]
exclude = ["ampel/py.typed"]
include = [
    'conf/*/*.json',
    'conf/*/*/*.json',
    'conf/*/*.yaml',
    'conf/*/*/*.yaml',
    'conf/*/*.yml',
    'conf/*/*/*.yml',
]

[tool.poetry.dependencies]
python = "^3.10"
ampel-interface = "^0.10.0"

[tool.poetry.group.dev.dependencies]
ampel-core = "^0.10.0"
mypy = "^1.11.2"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools >= 40.6.0", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--showlocals -ra"
filterwarnings = [
    "error",
]

[tool.mypy]
namespace_packages = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "astropy.*",
  "scipy.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP",
    "B",
    "DTZ",
    "PT",
    "RET",
    "SLF",
    "SIM",
    "PL",
    "PERF",
    "RUF",
]
ignore = [
    "E741", # ambiguous variable name
    "UP009", # UTF-8 encoding declaration is unnecessary
    "PLR09", # too many (arguments|branches)
    "PLR2004", # Magic value used in comparison
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["RUF018"] # assignment in assert is just fine in tests

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true
